<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/zhl">

    <com.application.zapplon.utils.TextViewThin
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size15"
        android:textSize="@dimen/size14"
        android:textColor="@color/zdhl5"
        android:textAllCaps="true"
        android:text="@string/change_password"/>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height=".5dp"
        android:background="@color/zhl1.5"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/size10"
        android:layout_marginLeft="@dimen/size5"
        android:layout_marginRight="@dimen/size5"
        />

    <com.application.zapplon.utils.EditTextLight
        android:id="@+id/old_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size15"
        android:textSize="@dimen/size14"
        android:textColor="@color/zdhl5"
        android:textAllCaps="true"
        android:layout_below="@id/separator"
        android:visibility="gone"
        android:hint="@string/old_password"
        android:textColorHint="@color/zdhl"
        android:inputType="textPassword"
        android:background="@color/zhl1.5"
        android:layout_marginTop="@dimen/size10"
        android:layout_marginLeft="@dimen/size10"
        android:layout_marginRight="@dimen/size10"/>

    <com.application.zapplon.utils.EditTextLight
        android:id="@+id/new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size15"
        android:textSize="@dimen/size14"
        android:textColor="@color/zdhl5"
        android:textAllCaps="true"
        android:textColorHint="@color/zdhl"
        android:inputType="textPassword"
        android:layout_below="@id/old_password"
        android:background="@color/zhl1.5"
        android:layout_marginTop="@dimen/size10"
        android:layout_marginLeft="@dimen/size10"
        android:hint="@string/new_password"
        android:layout_marginRight="@dimen/size10"/>

    <com.application.zapplon.utils.TextViewThin
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/new_password"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size15"
        android:textSize="@dimen/size14"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size10"
        android:background="@drawable/zapplon_button_feedback"
        android:textAllCaps="true"
        android:text="@string/submit"/>

</RelativeLayout>