<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_below="@+id/header" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/feedback_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.application.zapplon.utils.EditTextLight
                android:id="@+id/feedback_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_zhl_rounded"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:textColorHint="@color/zhl_darkest"
                android:textSize="@dimen/size16" />

            <com.application.zapplon.utils.TextViewThin
                android:id="@+id/feedback_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_email"
                android:textSize="@dimen/size14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/zhl_dark"
            android:clickable="true"
            android:gravity="center"
            android:onClick="submit"
            android:visibility="gone" >

            <com.application.zapplon.utils.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
