<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/rate_dialog_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/android_light_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/height10"
        android:paddingLeft="@dimen/height15"
        android:paddingTop="@dimen/height10"
        android:text="@string/rate_dialog_message"
        android:textColor="@color/zapplon_blue"
        android:textSize="@dimen/size20" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/rate_dialog_message"
        android:background="@color/zapplon_blue" />

    <TextView
        android:id="@+id/rate_dialog_rate_now"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height42"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/line"
        android:background="@drawable/custombackandroidlight"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/height15"
        android:text="@string/rate_dialog_rate_now"
        android:textColor="@color/black"
        android:textSize="@dimen/size18" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height=".5dp"
        android:layout_below="@id/rate_dialog_rate_now"
        android:background="@color/zhl_dark" />

    <TextView
        android:id="@+id/rate_dialog_remind"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height42"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/line1"
        android:background="@drawable/custombackandroidlight"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/height15"
        android:text="@string/rate_dialog_remind"
        android:textColor="@color/black"
        android:textSize="@dimen/size18" />

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height=".5dp"
        android:layout_below="@id/rate_dialog_remind"
        android:background="@color/zhl_dark" />

    <TextView
        android:id="@+id/rate_dialog_never"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height42"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/line2"
        android:background="@drawable/custombackandroidlight"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/height15"
        android:text="@string/rate_dialog_never"
        android:textColor="@color/black"
        android:textSize="@dimen/size18" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_dialog_never"
        android:background="@color/android_light_background"
        android:paddingBottom="@dimen/height10" >

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height=".5dp"
            android:background="@color/zhl_darker" />

        <TextView
            android:id="@+id/google_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/height15"
            android:layout_marginTop="@dimen/height10"
            android:text="@string/rate_dialog_google_text"
            android:textColor="@color/zdhl6"
            android:textSize="@dimen/size16" />

        <com.google.android.gms.plus.PlusOneButton
            xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
            android:id="@+id/plus_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_button_text"
            android:layout_marginLeft="@dimen/height15"
            android:layout_marginTop="@dimen/height10"
            plus:annotation="inline"
            plus:size="standard" />
    </RelativeLayout>

</RelativeLayout>